Made the colors better, made the root node the same size as the other nodes, made nodes fill in automatically for nodes, unless you are working on creating a tree. Also fixed the overlapping label issue, so tree separation is determined either by the length of the node's value, or the length of its label, whichever is longer.

--- a/static/css/parse-tree.css
+++ b/static/css/parse-tree.css
@@ -60,7 +60,6 @@ body {
 }
 	
 .node circle {
-	fill: #FFF;
 	stroke: #49A556;
 	stroke-width: 3px;
 }
